# brightsnakes

./: .bumpversion.cfg  .gitignore  AUTHORS.rst  CONTRIBUTING.rst  LICENSE  Makefile  README.md  README.rst  config.toml  main.py  mkdocs.yml  pyproject.toml  tasks.py
.github/: ISSUE_TEMPLATE.md
cli/: tui.py
development/: install-tools.sh
docs/: conf.py  index.md  index.rst  installation.rst  usage.rst
effective/: 06_unpacking_over_indexing.py  07_enumerate_over_range.py
effective/basics/: enumerate_over_range.py  unpacking_over_indexing.py
objects/: Iterator.py  Parrot.py  ParrotCallable.py  ParrotCompare.py  ParrotComputedAttrs.py  ParrotIterator.py  ParrotProperties.py
objects/test/: test_callable.py  test_comparison.py  test_computed_attrs.py  test_iterator.py  test_parrot.py  test_props.py
patterns/: __init__.py  cli.py
patterns/dependency_injection/: AmazingFooImpl.py  DIContainer.py  Example.py  __init__.py  modules.toml
patterns/dependency_injection/modules/: AmazingFooImpl.py  FooInterface.py
patterns/ioc/: DIContainer.py  main.py
patterns/ioc/dependencies/: concretes.py  interfaces.py
patterns/principles/: composition_over_inheritance.py
stdlib/: pickler.py
tests/: __init__.py  test_patterns.py
