[tool]
[tool.poetry]
name = "brightsnakes"
version = "0.1.0"
homepage = "https://github.com/bm4cs/brightsnakes"
description = "Fun python code."
authors = ["Benjamin Simmonds <ben@bencode.net>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "effective" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4"
click = "*"

[tool.poetry.dev-dependencies]
bumpversion = "*"
invoke = "*"
pylint = "*"
pytest = ">=7.2.0"
black = "*"

[tool.poetry.scripts]
patterns = 'patterns.cli:main'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
