[tool]
[tool.poetry]
name = "brightsnakes"
version = "0.1.0"
homepage = "https://github.com/bm4cs/brightsnakes"
description = "Fun python code."
authors = ["Benjamin Simmonds <ben@bencode.net>"]
readme = "README.md"
license = "MIT"
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
]
packages = [
    { include = "effective" },
    { include = "tests", format = "sdist" },
]

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
pattern  = "^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?"
format-jinja = """
    {%- if distance == 0 -%}
        {{- base -}}
    {%- else -%}
        {{- base }}.dev{{ distance }}+g{{commit}}
    {%- endif -%}
"""

[tool.poetry.dependencies]
python = ">=3.10,<4"
rich = "^13.7.1"

[tool.poetry.group.dev.dependencies]
bumpversion = "*"
invoke = "*"
pylint = "*"
pytest = ">=7.2.0"
ruff = "^0.3.4"

[tool.poetry.scripts]
patterns = 'patterns.cli:main'

[[tool.poetry.source]]
name = "private"
url = "http://localhost:8080/simple/"
priority = "supplemental"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.isort]
profile = "black"
